k8s/cxr/cxr-deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: cxr-deployment
  namespace: deepmd
spec:
  selector:
    matchLabels:
      app: cxr
  replicas: 1
  template:
    metadata:
      labels:
        app: cxr
    spec:
      volumes:
      - name: deepmd-storage-input
        hostPath:
          path: /tmp/deepmd/cxr/input
          type: DirectoryOrCreate
      - name: deepmd-storage-output
        hostPath:
          path: /tmp/deepmd/cxr/output
          type: DirectoryOrCreate

      containers:
      - name: cxr
      
        image: anilyerramasu/cxr_gpu
        
        ports:
          - containerPort: 5000
        imagePullPolicy: Always
        volumeMounts:
          - name: deepmd-storage-input
            mountPath: /home/input
          - name: deepmd-storage-output
            mountPath: /home/output
        readinessProbe:
            httpGet:
              path: /cxr
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: cxr-service
  namespace: deepmd
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  selector:
    app: cxr
