k8s/cxr/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-default
  namespace: deepmd-pc
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: public
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 800m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60000"
    
    
spec:

  rules:
  - host: models.deepmd.io
    http:
      paths:
      - path: /cxr
        pathType: Prefix
        backend:
          service:
            name: cxr-service
            port:
              number: 5000
